move the ci workflows into root .github

--- a/.github/workflows/to_ci.yml
+++ b/.github/workflows/to_ci.yml
@@ -1,14 +1,20 @@
-name: CI
+name: Twitch Oauth2 CI
 env:
   CI_TWITCH_OAUTH2_FEATURES: "all mock_api"
   MSRV: 1.71.1
 on:
   pull_request:
     types: [opened, reopened, synchronize]
+    paths:
+      - 'twitch_oauth2/**'
   push:
     branches: [main]
+    paths:
+      - 'twitch_oauth2/**'
   merge_group:
     types: [checks_requested]
+    paths:
+      - 'twitch_oauth2/**'
 jobs:
   ci:
     name: CI
