ignore subpackages for api CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,10 +5,19 @@ env:
 on:
   pull_request:
     types: [opened, reopened, synchronize]
+    paths-ignore:
+      - 'twitch_oauth2/**'
+      - 'twitch_types/**'
   push:
     branches: [main]
+    paths-ignore:
+      - 'twitch_oauth2/**'
+      - 'twitch_types/**'
   merge_group:
     types: [checks_requested]
+    paths-ignore:
+      - 'twitch_oauth2/**'
+      - 'twitch_types/**'
 jobs:
   ci:
     name: CI
