--- a/.github/workflows/tt_ci.yml
+++ b/.github/workflows/tt_ci.yml
@@ -3,15 +3,15 @@ on:
   pull_request:
     types: [opened, reopened, synchronize]
     paths:
-      - 'twitch_types/**'
+      - twitch_types/**
   push:
     branches: [main]
     paths:
-      - 'twitch_types/**'
+      - twitch_types/**
   merge_group:
     types: [checks_requested]
     paths:
-      - 'twitch_types/**'
+      - twitch_types/**
 env:
   MSRV: 1.67.0
 jobs:
