--- a/twitch_oauth2/Cargo.toml
+++ b/twitch_oauth2/Cargo.toml
@@ -44,7 +44,7 @@ aliri_braid = "0.4.0"
 url = "2.5.4"
 base64 = "0.22.0"
 rand = "0.8.5"
-twitch_types = { version = "0.4.3", features = ["serde"] }
+twitch_types = { workspace = true, features = ["serde"] }
 
 [target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
 web-time = { version = "1.1.0" }
