--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -50,7 +50,8 @@ jobs:
         with:
           rust-version: 1.77.0
           command: check ${{ matrix.checks }} -s
-          arguments: --all-features --package twitch_api
+          arguments: --all-features
+          manifest-path: packages/twitch_types/Cargo.toml
           log-level: warn
 
   cargo-deny-types:
@@ -69,7 +70,8 @@ jobs:
         with:
           rust-version: 1.67.0
           command: check ${{ matrix.checks }} -s
-          arguments: --all-features --package twitch_types
+          arguments: --all-features
+          manifest-path: packages/twitch_api/Cargo.toml
           log-level: warn
 
   cargo-deny-oauth2:
@@ -88,5 +90,6 @@ jobs:
         with:
           rust-version: 1.71.1
           command: check ${{ matrix.checks }} -s
-          arguments: --all-features --package twitch_oauth2
+          arguments: --all-features
+          manifest-path: packages/twitch_oauth2/Cargo.toml
           log-level: warn
