--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "twitch_api"
+name = "twitch_rs"
 version = "0.7.2"
 authors = ["Emil Gardström <emil.gardstrom@gmail.com>"]
 edition = "2018"
