--- a/packages/twitch_api/Cargo.toml
+++ b/packages/twitch_api/Cargo.toml
@@ -21,23 +21,26 @@ include = [
 ]
 
 [dependencies]
+thiserror = "1.0.50"
 displaydoc = "0.2.5"
 http = "1.2.0"
 typed-builder = { version = "0.20.0", optional = true }
 url = { workspace = true }
 once_cell = "1.19.0"
 twitch_oauth2 = { workspace = true, optional = true }
-serde = { workspace = true }
+serde = { version = "1.0.190" }
 serde_derive = { version = "1.0.190" }
 serde_path_to_error = { version = "0.1.14", optional = true }
 async-trait = { version = "0.1.74", optional = true }
-serde_json = { workspace = true, optional = true }
+serde_json = { version = "1.0.107", optional = true }
 serde_ignored = { version = "0.1.9", optional = true }
 tracing = { version = "0.1.40", optional = true }
 ureq = { workspace = true, optional = true }
 reqwest = { version = "0.12.5", optional = true, default-features = false }
 surf = { version = "2.3.2", optional = true, default-features = false }
-http-types = { version = "2.12.0", optional = true, features = ["hyperium_http"] }
+http-types = { version = "2.12.0", optional = true, features = [
+    "hyperium_http",
+] }
 sha2 = { version = "0.10.8", optional = true }
 crypto_hmac = { package = "hmac", version = "0.12.1", optional = true }
 aliri_braid = "0.4.0"
@@ -76,9 +79,17 @@ helix = [
 
 deser_borrow = []
 
-surf = ["dep:surf", "dep:http-types", "client", "twitch_oauth2/surf"]
+surf = [
+    "dep:surf",
+    "dep:http-types",
+    "client",
+    "twitch_oauth2/surf",
+]
+
 ureq = ["dep:ureq", "client"]
+
 reqwest = ["dep:reqwest", "client", "twitch_oauth2/reqwest"]
+
 tower = ["dep:tower-service", "dep:http-body-util", "client"]
 
 pubsub = [
@@ -106,6 +117,7 @@ eventsub = [
 ]
 
 hmac = ["dep:crypto_hmac", "dep:sha2"]
+
 mock_api = ["twitch_oauth2?/mock_api"]
 
 all = [
@@ -139,11 +151,9 @@ serde_json = "1.0.107"
 reqwest = "0.12.2"
 hyper = "1.4.1"
 
-[package.metadata.docs.rs]
-features = ["all", "unsupported", "_all"]
-rustc-args = ["--cfg", "nightly"]
-rustdoc-args = ["--cfg", "nightly"]
-cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"] 
+[build-dependencies]
+tower = "0.4.13"
+version_check = "0.9.4"
 
 [[example]]
 name = "automod_check"
@@ -195,5 +205,19 @@ name = "mock_api"
 path = "examples/mock_api.rs"
 required-features = ["reqwest", "helix", "mock_api", "twitch_oauth2/mock_api"]
 
+[package.metadata.docs.rs]
+features = ["all", "unsupported", "_all"]
+rustc-args = ["--cfg", "nightly"]
+rustdoc-args = ["--cfg", "nightly"]
+cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
+
+[profile.dev.package.backtrace]
+opt-level = 3
+
+#workaround for using different twitch_types
+[patch.crates-io.twitch_types]
+path = "./twitch_types"
+
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(_internal_never)', 'cfg(nightly)'] }
+
