not exactly sure what's going on here

--- a/packages/twitch_oauth2/Cargo.toml
+++ b/packages/twitch_oauth2/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "twitch_oauth2"
 version = "0.15.1"
+resolver = "2"
 edition = "2021"
 repository = "https://github.com/twitch-rs/twitch_api"
 license = "MIT OR Apache-2.0"
