--- a/packages/twitch_api/Cargo.toml
+++ b/packages/twitch_api/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "twitch_api"
 version = "0.7.2"
+resolver = "2"
 authors = ["Emil Gardström <emil.gardstrom@gmail.com>"]
 edition = "2018"
 repository = "https://github.com/twitch-rs/twitch_api"
