--- a/packages/twitch_types/Cargo.toml
+++ b/packages/twitch_types/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "twitch_types"
 version = "0.4.8"
+resolver = "2"
 edition = "2021"
 repository = "https://github.com/twitch-rs/twitch_api"
 license = "MIT OR Apache-2.0"
