--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,16 +24,51 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test, rustfmt, clippy, docs]
     steps:
-      - uses: actions/checkout@v4
+      - name: Install release-please
+        run: npm install --global release-please@15.11
+      - name: Create Release PR
+        run: |
+          for command in release-pr github-release; do
+            release-please release-pr \
+              --debug \
+              --token=${{ secrets.GITHUB_TOKEN }} \
+              --repo-url=${{ github.repositoryUrl }} \
+              --config-file=release-please-config.json \
+              --manifest-file=release-please-manifest.json
+
+  # release:
+  #   name: Release
+  #   runs-on: ubuntu-latest
+  #   needs: [test, rustfmt, clippy, docs]
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #       with:
+  #         submodules: recursive
+  #         fetch-depth: 0 # fetch tags for publish
+  #         # ssh-key: "${{ secrets.COMMIT_KEY }}" # use deploy key to trigger workflow on tag
+  #     - uses: Swatinem/rust-cache@v2
+  #     - run: cargo xtask release --package twitch_api
+  #       env:
+  #         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #         CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+  publish-to-crates-io:
+    name: Release
+    runs-on: ubuntu-latest
+    needs:
+      - release
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup Rust
+        uses: dsherret/rust-toolchain-file@v1
+      - name: Rust Cache
+        uses: Swatinem/rust-cache@v2
+      - name: Install cargo-workspaces
+        uses: taiki-e/install-action@v2
         with:
-          submodules: recursive
-          fetch-depth: 0 # fetch tags for publish
-          # ssh-key: "${{ secrets.COMMIT_KEY }}" # use deploy key to trigger workflow on tag
-      - uses: Swatinem/rust-cache@v2
-      - run: cargo xtask release --package twitch_api
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+          tool: cargo-workspaces
+      - name: Publish
+        run: cargo workspaces publish --from-git --token "${{ secrets.CARGO_REGISTRY_TOKEN }}" --yes ${{ github.ref == 'refs/heads/main' && '--dry-run' }}
   test:
     name: Tests
     strategy:
