--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
               --repo-url=${{ github.repositoryUrl }} \
               --config-file=release-please-config.json \
               --manifest-file=release-please-manifest.json
-
+          done
   # release:
   #   name: Release
   #   runs-on: ubuntu-latest
@@ -52,7 +52,7 @@ jobs:
   #         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   #         CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
   publish-to-crates-io:
-    name: Release
+    name: Publish
     runs-on: ubuntu-latest
     needs:
       - release
