--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Create Release PR
         run: |
           for command in release-pr github-release; do
-            release-please release-pr \
+            release-please ${command} \
               --debug \
               --token=${{ secrets.GITHUB_TOKEN }} \
               --repo-url=${{ github.repositoryUrl }} \
