fix: whoops missed the manifest file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
               --token=${{ secrets.GITHUB_TOKEN }} \
               --repo-url=${{ github.repositoryUrl }} \
               --config-file=release-please-config.json \
-              --manifest-file=release-please-manifest.json
+              --manifest-file=.release-please-manifest.json
           done
   # release:
   #   name: Release
