--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   ci:
     name: CI
-    needs: [release]
+    needs: [test, rustfmt, prettier, clippy, docs, release]
     runs-on: ubuntu-latest
     if: always()
     steps:
@@ -22,7 +22,7 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    needs: []
+    needs: [test, rustfmt, clippy, docs]
     steps:
       - name: Install release-please
         run: npm install --global release-please@15.11
@@ -36,21 +36,6 @@ jobs:
               --config-file=release-please-config.json \
               --manifest-file=.release-please-manifest.json
           done
-  # release:
-  #   name: Release
-  #   runs-on: ubuntu-latest
-  #   needs: [test, rustfmt, clippy, docs]
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #       with:
-  #         submodules: recursive
-  #         fetch-depth: 0 # fetch tags for publish
-  #         # ssh-key: "${{ secrets.COMMIT_KEY }}" # use deploy key to trigger workflow on tag
-  #     - uses: Swatinem/rust-cache@v2
-  #     - run: cargo xtask release --package twitch_api
-  #       env:
-  #         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #         CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
   publish-to-crates-io:
     name: Publish
     runs-on: ubuntu-latest
@@ -71,86 +56,86 @@ jobs:
           else
             cargo workspaces publish --from-git --yes --dry-run
           fi
-  # test:
-  #   name: Tests
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       os: [windows-latest, ubuntu-latest]
-  #       rust: ["", nightly]
-  #   runs-on: ${{ matrix.os }}
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #       with:
-  #         submodules: recursive
-  #     - name: Install rust
-  #       uses: dtolnay/rust-toolchain@master
-  #       with:
-  #         toolchain: ${{ matrix.rust || env.MSRV }}
-  #     - uses: Swatinem/rust-cache@v2
-  #     - name: Test twitch_api
-  #       run: cargo test --locked --all-targets --features "${{ env.CI_TWITCH_API_FEATURES }}" -p twitch_api
-  # rustfmt:
-  #   name: Rustfmt
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #       with:
-  #         submodules: recursive
-  #     - uses: dtolnay/rust-toolchain@master
-  #       with:
-  #         toolchain: nightly
-  #         components: rustfmt
-  #     - name: Run fmt -- --check
-  #       run: cargo fmt -- --check
-  # prettier:
-  #   name: Prettier
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - name: Check formatting with Prettier
-  #       uses: actionsx/prettier@v3
-  #       with:
-  #         args: -c .
+  test:
+    name: Tests
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [windows-latest, ubuntu-latest]
+        rust: ["", nightly]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+      - name: Install rust
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: ${{ matrix.rust || env.MSRV }}
+      - uses: Swatinem/rust-cache@v2
+      - name: Test twitch_api
+        run: cargo test --locked --all-targets --features "${{ env.CI_TWITCH_API_FEATURES }}" -p twitch_api
+  rustfmt:
+    name: Rustfmt
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+      - uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: nightly
+          components: rustfmt
+      - name: Run fmt -- --check
+        run: cargo fmt -- --check
+  prettier:
+    name: Prettier
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Check formatting with Prettier
+        uses: actionsx/prettier@v3
+        with:
+          args: -c .
 
-  # clippy:
-  #   name: Clippy
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #       with:
-  #         submodules: recursive
-  #     - uses: dtolnay/rust-toolchain@master
-  #       with:
-  #         toolchain: nightly
-  #         components: clippy
-  #     - uses: Swatinem/rust-cache@v2
-  #     - run: cargo clippy --locked --all-targets --no-default-features -p twitch_api
-  #     - run: cargo clippy --locked --all-targets --no-default-features --features "helix" -p twitch_api
-  #     - run: cargo clippy --locked --all-targets --no-default-features --features "helix client" -p twitch_api
-  #     - run: cargo clippy --locked --all-targets --no-default-features --features "pubsub" -p twitch_api
-  #     - run: cargo clippy --locked --all-targets --no-default-features --features "eventsub" -p twitch_api
-  #     - run: cargo clippy --locked --all-targets --features "${{ env.CI_TWITCH_API_FEATURES }} trace_unknown_fields" -p twitch_api
-  #     - run: cargo clippy --locked --all-targets --features "${{ env.CI_TWITCH_API_FEATURES }} _all" -p twitch_api
-  #     - run: cargo clippy --locked --all-targets --all-features --workspace
-  # docs:
-  #   name: Docs
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #       with:
-  #         submodules: recursive
-  #     - uses: dtolnay/rust-toolchain@master
-  #       with:
-  #         toolchain: nightly
-  #     - uses: Swatinem/rust-cache@v2
+  clippy:
+    name: Clippy
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+      - uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: nightly
+          components: clippy
+      - uses: Swatinem/rust-cache@v2
+      - run: cargo clippy --locked --all-targets --no-default-features -p twitch_api
+      - run: cargo clippy --locked --all-targets --no-default-features --features "helix" -p twitch_api
+      - run: cargo clippy --locked --all-targets --no-default-features --features "helix client" -p twitch_api
+      - run: cargo clippy --locked --all-targets --no-default-features --features "pubsub" -p twitch_api
+      - run: cargo clippy --locked --all-targets --no-default-features --features "eventsub" -p twitch_api
+      - run: cargo clippy --locked --all-targets --features "${{ env.CI_TWITCH_API_FEATURES }} trace_unknown_fields" -p twitch_api
+      - run: cargo clippy --locked --all-targets --features "${{ env.CI_TWITCH_API_FEATURES }} _all" -p twitch_api
+      - run: cargo clippy --locked --all-targets --all-features --workspace
+  docs:
+    name: Docs
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+      - uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: nightly
+      - uses: Swatinem/rust-cache@v2
 
-  #     # Check if overviews are up-to-date
-  #     - name: Generate and check overviews
-  #       run: cargo xtask overview --check
+      # Check if overviews are up-to-date
+      - name: Generate and check overviews
+        run: cargo xtask overview --check
 
-  #     # We do the following to make sure docs.rs can document properly without anything broken, and that docs are working.
-  #     - name: Run doc tests
-  #       run: cargo test --doc --features "${{ env.CI_TWITCH_API_FEATURES }} _all"
-  #     - name: Check twitch_api docs
-  #       run: cargo xtask doc
+      # We do the following to make sure docs.rs can document properly without anything broken, and that docs are working.
+      - name: Run doc tests
+        run: cargo test --doc --features "${{ env.CI_TWITCH_API_FEATURES }} _all"
+      - name: Check twitch_api docs
+        run: cargo xtask doc
